<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_rectangle"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAreaFlag"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAreaName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:theme="@style/TitleText"
            app:layout_constraintStart_toEndOf="@id/ivAreaFlag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Area" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAreaCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintStart_toStartOf="@id/tvAreaName"
            app:layout_constraintTop_toBottomOf="@id/tvAreaName"
            tools:text="code" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCompetition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_rectangle"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clArea">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCompetitionEmblem"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompetitionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/label_competition_name"
            android:theme="@style/TitleText"
            app:layout_constraintStart_toEndOf="@id/ivCompetitionEmblem"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompetitionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_type"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintStart_toStartOf="@id/tvCompetitionName"
            app:layout_constraintTop_toBottomOf="@id/tvCompetitionName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCurrentSeason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_rectangle"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clCompetition">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_start_date"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="start"
            android:text="@string/label_end_date"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWinnerTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxEms="11"
            android:text="@string/label_winner"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="sssssssssssssssssssssssssssssssssssssssss" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAvailableSeasons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxEms="11"
            android:text="@string/label_available_seasons"
            android:theme="@style/DescriptionTextGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Available seasons: 34" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>